net: use `writev` when writing frames to tap
This allows us to avoid an extra user-space copy of the packet we are
transmitting to the tap. We use directly the buffers described by the
`DescriptorChain` by means of `IoVecBuffer`s.

Signed-off-by: Babis Chalios <bchalios@amazon.es>

--- a/resources/seccomp/aarch64-unknown-linux-musl.json
+++ b/resources/seccomp/aarch64-unknown-linux-musl.json
@@ -25,6 +25,10 @@
                 "syscall": "write"
             },
             {
+                "syscall": "writev",
+                "comment": "Used by the VirtIO net device to write to tap"
+            },
+            {
                 "syscall": "fsync"
             },
             {
