--- a/resources/seccomp/x86_64-unknown-linux-musl.json
+++ b/resources/seccomp/x86_64-unknown-linux-musl.json
@@ -25,6 +25,10 @@
                 "syscall": "write"
             },
             {
+                "syscall": "writev",
+                "comment": "Used by the VirtIO net device to write to tap"
+            },
+            {
                 "syscall": "fsync"
             },
             {
