--- a/src/api_server/swagger/firecracker.yaml
+++ b/src/api_server/swagger/firecracker.yaml
@@ -85,12 +85,12 @@ paths:
         Will fail if update is not possible.
       operationId: putBalloon
       parameters:
-      - name: body
-        in: body
-        description: Balloon properties
-        required: true
-        schema:
-          $ref: "#/definitions/Balloon"
+        - name: body
+          in: body
+          description: Balloon properties
+          required: true
+          schema:
+            $ref: "#/definitions/Balloon"
       responses:
         204:
           description: Balloon device created/updated
@@ -109,12 +109,12 @@ paths:
         Will fail if update is not possible.
       operationId: patchBalloon
       parameters:
-      - name: body
-        in: body
-        description: Balloon properties
-        required: true
-        schema:
-          $ref: "#/definitions/BalloonUpdate"
+        - name: body
+          in: body
+          description: Balloon properties
+          required: true
+          schema:
+            $ref: "#/definitions/BalloonUpdate"
       responses:
         204:
           description: Balloon device updated
@@ -151,12 +151,12 @@ paths:
         Will fail if update is not possible.
       operationId: patchBalloonStatsInterval
       parameters:
-      - name: body
-        in: body
-        description: Balloon properties
-        required: true
-        schema:
-          $ref: "#/definitions/BalloonStatsUpdate"
+        - name: body
+          in: body
+          description: Balloon properties
+          required: true
+          schema:
+            $ref: "#/definitions/BalloonStatsUpdate"
       responses:
         204:
           description: Balloon statistics interval updated
@@ -194,6 +194,49 @@ paths:
           description: Internal server error
           schema:
             $ref: "#/definitions/Error"
+
+  /cpu-config:
+    get:
+      summary: Gets the CPU configuration of the VM.
+      description:
+        Gets the machine configuration of the VM. When called before the PUT operation, it
+        will return the default values for the vCPU count (=1), memory size (=128 MiB).
+        By default SMT is disabled and there is no CPU Template.
+      operationId: getCpuConfiguration
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/CpuConfiguration"
+        default:
+          description: Internal server error
+          schema:
+            $ref: "#/definitions/Error"
+
+    put:
+      summary: Configures CPU features flags for the vCPUs of the VM. Pre-boot only.
+      description:
+        Updates the Virtual Machine's CPU configuration with the specified input.
+
+      operationId: putCpuConfiguration
+      parameters:
+        - name: body
+          in: body
+          description: Machine Configuration Parameters
+          schema:
+            $ref: "#/definitions/CpuConfiguration"
+      responses:
+        204:
+          description: CPU configuration created
+        400:
+          description: CPU configuration cannot be updated due to bad input
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal server error
+          schema:
+            $ref: "#/definitions/Error"
+
 
   /drives/{drive_id}:
     put:
@@ -783,8 +826,31 @@ definitions:
       - C3
       - T2
       - T2S
+      - CUSTOM
       - None
     default: "None"
+
+  CpuConfiguration:
+    type: string
+    description:
+      The CPU configuration defines a set of flags to be disabled/enabled for the microvm.
+    properties:
+      attributes:
+        type: array
+        items:
+          $ref: "#/definitions/CpuAttribute"
+    default: "None"
+
+  CpuAttribute:
+    type: object
+    description: Configuration of a feature of a vCPU.
+    properties:
+      attribute_name:
+        type: string
+        description: Symbolic name of the CPU feature.
+      is_enabled:
+        type: boolean
+        description: Specifies whether the attribute specified is to be enabled or not.
 
   Drive:
     type: object
