Refactor cpu-config API logic into own crate
Signed-off-by: Matthew Schlebusch <schlebus@amazon.com>

--- a/resources/guest_configs/cpu/cpu-config-2022-08-04.json
+++ b/resources/guest_configs/cpu/cpu-config-2022-08-04.json
@@ -1,4 +1,13 @@
 {
+  "baseline": {
+    "arch-general": {
+
+    },
+    "model-specific": {
+
+    }
+  },
+
   "cpu_features": [
     {
       "name": "ssbd",
