Support raw Cpuid for cpu template API
Signed-off-by: Matthew Schlebusch <schlebus@amazon.com>

--- a/resources/guest_configs/cpu/cpu-config-2022-08-04.json
+++ b/resources/guest_configs/cpu/cpu-config-2022-08-04.json
@@ -1,14 +1,7 @@
 {
-  "baseline": {
-    "arch-general": {
-
-    },
-    "model-specific": {
-
-    }
-  },
-
-  "cpu_features": [
+  "base_arch_features_template_path": "resources/guest_configs/cpu/x86_64_template_t2s_sandbox.json",
+  "base_special_features_template_path": "/tmp/x86_64_msr_template_path.json.ignored",
+  "cpu_feature_overrides": [
     {
       "name": "ssbd",
       "is_enabled": false
