--- a/src/vm_guest_config/Cargo.toml
+++ b/src/vm_guest_config/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "Apache-2.0"
 
 [dependencies]
+bincode = "1.3.3"
 serde = { version = ">=1.0.27", features = ["derive"] }
 serde_json = ">=1.0.9"
 itertools = ">=0.10.3"
