chore(tests): add top 10 tests by time taken
Signed-off-by: Pablo Barbáchano <pablob@amazon.com>

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,10 +1,11 @@
 [pytest]
 ; Omit verbose tracebacks, since they tend to pollute the output.
 addopts =
-  --tb=short
-  --showlocals
+    --tb=short
+    --durations=10
+    --showlocals
 
-; Overwrite the default norecurseirs, which includes 'build'.
+; Overwrite the default norecursedirs, which includes 'build'.
 norecursedirs = .*
 
 ; Default timeout for tests. can be overwritten at finer grained levels.
