--- a/src/seccompiler/Cargo.toml
+++ b/src/seccompiler/Cargo.toml
@@ -14,9 +14,10 @@ path = "src/seccompiler_bin.rs"
 
 [dependencies]
 bincode = "1.2.1"
+derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
 libc = "0.2.117"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.78"
-derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
+thiserror = "1.0.32"
 
 utils = { path = "../utils" }
