chore(devctr): update to Ubuntu 22.04
- Updates to Ubuntu 22.04
- Trim Docker image as much as possible
- Merge the architecture specific Dockerfiles into one
- Always use the poetry.lock file

Signed-off-by: Pablo Barbáchano <pablob@amazon.com>

--- a/tools/devctr/pyproject.toml
+++ b/tools/devctr/pyproject.toml
@@ -16,13 +16,13 @@ gitlint = "0.16.0"
 nsenter = "*"
 openapi-spec-validator = "*"
 pandas = "*"
-psutil = "5.7.0"
+psutil = "5.*"
 pylint = "*"
 pytest = "*"
 pytest-json-report = "*"
 pytest-timeout = "*"
 pytest-xdist = "*"
-python = "3.10.4"
+python = "3.10.*"
 PyYAML = "*"
 requests = "*"
 requests-unixsocket = "*"
