--- a/src/bit-fields/Cargo.toml
+++ b/src/bit-fields/Cargo.toml
@@ -15,6 +15,7 @@ exclude = ["/src/example.rs"]
 bit-fields-macros = { path = "../bit-fields-macros" }
 serde = { version = "1.0.139", features=["derive"] }
 thiserror = "1.0.32"
+construct = { path="../construct" }
 
 [dev-dependencies]
 serde_json = "1.0.83"
