--- a/tools/devctr/Dockerfile.x86_64
+++ b/tools/devctr/Dockerfile.x86_64
@@ -112,7 +112,7 @@ RUN (curl -sL https://deb.nodesource.com/setup_14.x | bash) \
 RUN curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain "$RUST_TOOLCHAIN" \
     && rustup target add x86_64-unknown-linux-musl \
     && rustup component add llvm-tools-preview \
-    && cargo install +"stable" cargo-audit \
+    && cargo install cargo-audit \
     && cargo install --locked cargo-deny \
     && cargo install --version $GRCOV_VERSION grcov
 
