--- a/.cargo/config
+++ b/.cargo/config
@@ -1,6 +1,11 @@
 [build]
 target-dir = "build/cargo_target"
 target = "x86_64-unknown-linux-musl"
+rustflags = [
+  "-Dclippy::ptr_as_ptr",
+  "-Dclippy::undocumented_unsafe_blocks",
+  "-Dclippy::cast_lossless"
+]
 
 [net]
 git-fetch-with-cli = true
